--- a/src/sass/blocks/_interested.scss
+++ b/src/sass/blocks/_interested.scss
@@ -83,4 +83,8 @@
         text-align: center;
         margin-top: 40px;
     }
+    .modal-dialog {
+        max-width: 650px;
+        width: 100%;
+    }
 }
