--- a/src/sass/blocks/_about.scss
+++ b/src/sass/blocks/_about.scss
@@ -19,4 +19,130 @@
             }
         }
     }
+    &-section, &-features {
+        border-bottom: 1px solid #000;
+    }
+    &-row {
+        align-items: center;
+    }
+    &-img {
+        width: 407px;
+        height: 81px;
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+        }
+    }
+    &-text {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 17px;
+        color: rgba(0, 0, 0, 0.7);
+        margin-bottom: 19px;
+    }
+    .col-md-5, .col-md-6, .col-md-7 {
+        padding: 0;
+    }
+    &-features {
+        &-wrapper {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            margin-top: 20px;
+        }
+        &-item {
+            max-width: 273px;
+            width: 100%;
+            text-align: center;
+            &-img {
+                height: 68px;
+                width: auto;
+                margin-bottom: 4px;
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: contain;
+                }
+            }
+            &-title {
+                font-family: 'Roboto';
+                font-weight: 500;
+                font-size: 24px;
+                line-height: 28px;
+            }
+            &-text {
+                font-family: 'Roboto';
+                font-weight: 400;
+                font-size: 16px;
+                line-height: 19px;
+            }
+        }
+    }
+    &-flex {
+        display: flex;
+        border-left: 2px solid var(--el-dark);
+    }
+    &-mission {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding-left: 18px;
+        width: 100%;
+        &-text {
+            position: relative;
+            padding: 19px 16px;
+            font-family: 'Roboto';
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 19px;
+            text-align: center;
+            border: 1px solid #D9D9D9;
+            filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+            border-radius: 10px;
+            max-width: 446px;
+            width: 100%;
+            margin-top: 24px;
+            margin-left: auto;
+            margin-right: 26px;
+        }
+        &-img {
+            position: absolute;
+            bottom: -33px;
+            left: -50px;
+        }
+    }
+    &-certificate {
+        &-wrapper {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: 30px;
+        }
+        &-item {
+            max-width: 179px;
+            width: 100%;
+            text-align: center;
+            margin-right: 47px;
+            &:last-child {
+                margin-right: 0;
+            }
+            &-img {
+                height: 206px;
+                width: auto;
+                margin-bottom: 2px;
+                img {
+                    width: auto;
+                    height: 100%;
+                }
+            }
+            &-name {
+                font-family: 'Roboto';
+                font-weight: 400;
+                font-size: 24px;
+                line-height: 28px;
+
+            }
+        }
+    }
 }
